cbm/src/store/store.h

/* ── Opaque handle ──────────────────────────────────────────────── */

typedef struct cbm_store cbm_store_t;