crates/cbm-sys/src/bindings.rs

unsafe extern "C" {
    pub fn cbm_registry_resolve_exact(
        r: *const cbm_registry_t,
        reference_name: *const ::std::os::raw::c_char,
        module_qn: *const ::std::os::raw::c_char,
        import_map_keys: *mut *const ::std::os::raw::c_char,
        import_map_vals: *mut *const ::std::os::raw::c_char,
        import_map_count: ::std::os::raw::c_int,
    ) -> cbm_resolution_t;
}
unsafe extern "C" {
    pub fn cbm_registry_reach_cache_begin(estimated_capacity: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn cbm_registry_reach_cache_end();
}
unsafe extern "C" {
    pub fn cbm_registry_import_map_cache_begin(
        keys: *mut *const ::std::os::raw::c_char,
        vals: *mut *const ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cbm_registry_import_map_cache_end();
}
unsafe extern "C" {
    pub fn cbm_registry_resolve_cache_begin(estimated_capacity: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn cbm_registry_resolve_cache_end();
}
unsafe extern "C" {
    pub fn cbm_registry_cache_failed() -> bool;
}
unsafe extern "C" {
    pub fn cbm_registry_exists(r: *const cbm_registry_t, qn: *const ::std::os::raw::c_char)
    -> bool;
}
unsafe extern "C" {
    pub fn cbm_perl_is_builtin(name: *const ::std::os::raw::c_char) -> bool;
}
unsafe extern "C" {
    pub fn cbm_perl_suppress_generic_match(
        is_perl: bool,
        is_method: bool,
        callee_name: *const ::std::os::raw::c_char,
        strategy: *const ::std::os::raw::c_char,
    ) -> bool;
}
unsafe extern "C" {
    pub fn cbm_tsjs_suppress_weak_method_match(
        is_tsjs: bool,
        is_method: bool,
        strategy: *const ::std::os::raw::c_char,
    ) -> bool;
}
unsafe extern "C" {
    pub fn cbm_registry_label_of(
        r: *const cbm_registry_t,
        qn: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_registry_find_by_name(
        r: *const cbm_registry_t,
        name: *const ::std::os::raw::c_char,
        out: *mut *mut *const ::std::os::raw::c_char,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_registry_size(r: *const cbm_registry_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_registry_find_ending_with(
        r: *const cbm_registry_t,
        suffix: *const ::std::os::raw::c_char,
        out: *mut *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_registry_is_import_reachable(
        candidate_qn: *const ::std::os::raw::c_char,
        import_vals: *mut *const ::std::os::raw::c_char,
        import_count: ::std::os::raw::c_int,
    ) -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_fuzzy_result_t {
    pub result: cbm_resolution_t,
    pub ok: bool,
}
impl Default for cbm_fuzzy_result_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn cbm_registry_fuzzy_resolve(
        r: *const cbm_registry_t,
        callee_name: *const ::std::os::raw::c_char,
        module_qn: *const ::std::os::raw::c_char,
        import_map_keys: *mut *const ::std::os::raw::c_char,
        import_map_vals: *mut *const ::std::os::raw::c_char,
        import_map_count: ::std::os::raw::c_int,
    ) -> cbm_fuzzy_result_t;
}
unsafe extern "C" {
    pub fn cbm_confidence_band(score: f64) -> *const ::std::os::raw::c_char;
}
pub type cbm_watcher_t = cbm_watcher;
pub type cbm_index_fn = ::std::option::Option<
    unsafe extern "C" fn(
        project_name: *const ::std::os::raw::c_char,
        root_path: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
unsafe extern "C" {
    pub fn cbm_watcher_new(
        store: *mut cbm_store_t,
        index_fn: cbm_index_fn,
        user_data: *mut ::std::os::raw::c_void,
    ) -> *mut cbm_watcher_t;
}
unsafe extern "C" {
    pub fn cbm_watcher_free(w: *mut cbm_watcher_t);
}
unsafe extern "C" {
    pub fn cbm_watcher_watch(
        w: *mut cbm_watcher_t,
        project_name: *const ::std::os::raw::c_char,
        root_path: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn cbm_watcher_unwatch(w: *mut cbm_watcher_t, project_name: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn cbm_watcher_touch(w: *mut cbm_watcher_t, project_name: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn cbm_watcher_invalidate(
        w: *mut cbm_watcher_t,
        project_name: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn cbm_watcher_poll_once(w: *mut cbm_watcher_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_watcher_run(
        w: *mut cbm_watcher_t,
        base_interval_ms: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_watcher_stop(w: *mut cbm_watcher_t);
}
unsafe extern "C" {
    pub fn cbm_watcher_watch_count(w: *mut cbm_watcher_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_watcher_poll_interval_ms(file_count: ::std::os::raw::c_int)
    -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_watcher_root_missing_errno(err: ::std::os::raw::c_int) -> bool;
}
unsafe extern "C" {
    pub fn cbm_cli_set_version(ver: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn cbm_cli_print_tool_help_prog(
        prog: *const ::std::os::raw::c_char,
        tool_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_cmd_install(
        argc: ::std::os::raw::c_int,
        argv: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_cmd_uninstall(
        argc: ::std::os::raw::c_int,
        argv: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_cmd_update(
        argc: ::std::os::raw::c_int,
        argv: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_build_install_plan_json(
        home: *const ::std::os::raw::c_char,
        binary_path: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_config_parse_bool_strict(
        value: *const ::std::os::raw::c_char,
        out: *mut bool,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_free_string(value: *mut ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn cbm_index_set_worker_role(is_worker: bool, response_out: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn cbm_index_set_transition_writer_project(project: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn cbm_profile_init();
}
unsafe extern "C" {
    pub fn cbm_profile_is_active() -> bool;
}
unsafe extern "C" {
    pub fn cbm_index_supervisor_mark_host();
}
unsafe extern "C" {
    pub fn cbm_http_server_set_binary_path(path: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn cbm_mimalloc_malloc(size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn cbm_mimalloc_malloc_aligned(
        size: usize,
        alignment: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn cbm_mimalloc_zalloc_aligned(
        size: usize,
        alignment: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn cbm_mimalloc_realloc_aligned(
        p: *mut ::std::os::raw::c_void,
        newsize: usize,
        alignment: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn cbm_mimalloc_free(p: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn cbm_mimalloc_usable_size(p: *const ::std::os::raw::c_void) -> usize;
}
unsafe extern "C" {
    pub fn cbm_mimalloc_collect(force: bool);
}
unsafe extern "C" {
    pub fn cbm_mimalloc_version() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_mimalloc_process_info(
        elapsed_msecs: *mut usize,
        user_msecs: *mut usize,
        system_msecs: *mut usize,
        current_rss: *mut usize,
        peak_rss: *mut usize,
        current_commit: *mut usize,
        peak_commit: *mut usize,
        page_faults: *mut usize,
    );
}
unsafe extern "C" {
    pub fn cbm_abi_layout_size(
        type_name: *const ::std::os::raw::c_char,
        size_out: *mut usize,
        align_out: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_abi_layout_offset(
        type_name: *const ::std::os::raw::c_char,
        field_name: *const ::std::os::raw::c_char,
        offset_out: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_astro_set_cache_dir(path: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_astro_clear_cache_dir();
}
unsafe extern "C" {
    pub fn cbm_astro_cache_dir_override() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_astro_env_record_fault(
        code: *const ::std::os::raw::c_char,
        var: *const ::std::os::raw::c_char,
        message: *const ::std::os::raw::c_char,
        remediation: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn cbm_astro_env_record_truncation(
        name: *const ::std::os::raw::c_char,
        needed: usize,
        capacity: usize,
    );
}
unsafe extern "C" {
    pub fn cbm_astro_env_record_unresolvable_store();
}
unsafe extern "C" {
    pub fn cbm_astro_env_faulted_for(name: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_astro_env_fault_code() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_astro_env_fault_message() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_astro_env_fault_remediation() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_astro_env_fault_clear();
}
